# otus-cpp-02-allocator-container

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: release.yml
src/: CMakeLists.txt  Core.h  FixedAllocator.h  Log.cpp  Log.h  MyAllocator.h  MyContainer.h  main.cpp
src/MyAllocator/: CMakeLists.txt  MyAllocator.cpp  MyAllocator.h
src/MyContainer/: CMakeLists.txt  MyContainer.cpp  MyContainer.h
src/lib/: CMakeLists.txt  MyAllocator.cpp  MyAllocator.h
